Retain activity current status and other improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="title_activity_artist">ArtistActivity</string>
     <string name="artist_tracks_getting">Getting tracks</string>
     <string name="artist_activity_title">Top 10 tracks</string>
+    <string name="artist_search_error_not_found">Artist not found! Please refine the search</string>
+    <string name="error_default">Could not search, please try again</string>
+    <string name="get_tracks_error">Could not get tracks</string>
 </resources>
